fully functional calculator

--- a/index.html
+++ b/index.html
@@ -10,39 +10,39 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div class="header-title">Hey, kid...wanna do some math?</div>
+    <div class="header-title"><p>Hey, kid...wanna do some math?</p></div>
     <div class="calculator">
         <div id="screen">
-            <div id="input">3+3</div>
-            <div id="result">6</div>
+            <div id="input"></div>
+            <div id="result"></div>
         </div>
         <div class="row-flex">
-            <button type="button" class="big-button">Clear</button>
-            <button type="button" class="big-button">Delete</button>
+            <button type="button" id="clear" class="big-button">Clear</button>
+            <button type="button" id="delete" class="big-button">Delete</button>
         </div>
         <div class="row-flex">
-            <button type="button" class="small-button">7</button>
-            <button type="button" class="small-button">8</button>
-            <button type="button" class="small-button">9</button>
-            <button type="button" class="small-button operations">÷</button>
+            <button type="button" id="seven" class="small-button">7</button>
+            <button type="button" id="eight" class="small-button">8</button>
+            <button type="button" id="nine" class="small-button">9</button>
+            <button type="button" id="divide" class="small-button operations">÷</button>
         </div>
         <div class="row-flex">
-            <button type="button" class="small-button">4</button>
-            <button type="button" class="small-button">5</button>
-            <button type="button" class="small-button">6</button>
-            <button type="button" class="small-button operations">×</button>
+            <button type="button" id="four" class="small-button">4</button>
+            <button type="button" id="five" class="small-button">5</button>
+            <button type="button" id="six" class="small-button">6</button>
+            <button type="button" id="multiply" class="small-button operations">×</button>
         </div>
         <div class="row-flex">
-            <button type="button" class="small-button">1</button>
-            <button type="button" class="small-button">2</button>
-            <button type="button" class="small-button">3</button>
-            <button type="button" class="small-button operations">-</button>
+            <button type="button" id="one" class="small-button">1</button>
+            <button type="button" id="two" class="small-button">2</button>
+            <button type="button" id="three" class="small-button">3</button>
+            <button type="button" id="subtract" class="small-button operations">-</button>
         </div>
         <div class="row-flex">
-            <button type="button" class="small-button operations">.</button>
-            <button type="button" class="small-button">0</button>
-            <button type="button" class="small-button operations">=</button>
-            <button type="button" class="small-button operations">+</button>
+            <button type="button" id="dot" class="small-button operations">.</button>
+            <button type="button" id="zero" class="small-button">0</button>
+            <button type="button" id="equals" class="small-button operations">=</button>
+            <button type="button" id="add" class="small-button operations">+</button>
         </div>
     </div>
 </body>
